Update generated CRDs from controller-gen
v0.9.2 controller-gen removes status fields from CRD generation (for
good reason). This is the output after running `make manifests`.

--- a/config/crd/bases/run.tanzu.vmware.com_clusterbootstraps.yaml
+++ b/config/crd/bases/run.tanzu.vmware.com_clusterbootstraps.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.8.0
+    controller-gen.kubebuilder.io/version: v0.9.2
   creationTimestamp: null
   name: clusterbootstraps.run.tanzu.vmware.com
 spec:
@@ -97,6 +97,7 @@ spec:
                           - kind
                           - name
                           type: object
+                          x-kubernetes-map-type: atomic
                         secretRef:
                           type: string
                       type: object
@@ -136,6 +137,7 @@ spec:
                         - kind
                         - name
                         type: object
+                        x-kubernetes-map-type: atomic
                       secretRef:
                         type: string
                     type: object
@@ -174,6 +176,7 @@ spec:
                         - kind
                         - name
                         type: object
+                        x-kubernetes-map-type: atomic
                       secretRef:
                         type: string
                     type: object
@@ -212,6 +215,7 @@ spec:
                         - kind
                         - name
                         type: object
+                        x-kubernetes-map-type: atomic
                       secretRef:
                         type: string
                     type: object
@@ -250,6 +254,7 @@ spec:
                         - kind
                         - name
                         type: object
+                        x-kubernetes-map-type: atomic
                       secretRef:
                         type: string
                     type: object
@@ -321,9 +326,3 @@ spec:
     storage: true
     subresources:
       status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
