--- a/config/crd/bases/csi.tanzu.vmware.com_vspherecsiconfigs.yaml
+++ b/config/crd/bases/csi.tanzu.vmware.com_vspherecsiconfigs.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.8.0
+    controller-gen.kubebuilder.io/version: v0.9.2
   creationTimestamp: null
   name: vspherecsiconfigs.csi.tanzu.vmware.com
 spec:
@@ -95,6 +95,7 @@ spec:
                         - kind
                         - name
                         type: object
+                        x-kubernetes-map-type: atomic
                       vSphereVersion:
                         type: string
                       windowsSupport:
@@ -126,9 +127,3 @@ spec:
     storage: true
     subresources:
       status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
