--- a/config/crd/bases/run.tanzu.vmware.com_tanzukubernetesclusters.yaml
+++ b/config/crd/bases/run.tanzu.vmware.com_tanzukubernetesclusters.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.8.0
+    controller-gen.kubebuilder.io/version: v0.9.2
   creationTimestamp: null
   name: tanzukubernetesclusters.run.tanzu.vmware.com
 spec:
@@ -303,6 +303,7 @@ spec:
                                 description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                                 type: string
                             type: object
+                            x-kubernetes-map-type: atomic
                         type: object
                       vmClass:
                         description: VMClass is the name of the VirtualMachineClass,
@@ -472,6 +473,7 @@ spec:
                                   description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                                   type: string
                               type: object
+                              x-kubernetes-map-type: atomic
                           type: object
                         vmClass:
                           description: VMClass is the name of the VirtualMachineClass,
@@ -681,9 +683,3 @@ spec:
     storage: true
     subresources:
       status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
