--- a/packages/tkg/bundle/config/packageinstalls/tkg-clusterclass-service-account.yaml
+++ b/packages/tkg/bundle/config/packageinstalls/tkg-clusterclass-service-account.yaml
@@ -16,87 +16,10 @@ metadata:
   annotations:
     kapp.k14s.io/change-group: "tkg-clusterclass-packageinstall/serviceaccount-0"
 rules:
-  - apiGroups:
-      - ""
-    resources:
-      - secrets
-      - configmaps
-      - serviceaccounts
-      - services
-    verbs:
-      - create
-      - update
-      - get
-      - list
-      - delete
-  - apiGroups:
-      - cluster.x-k8s.io
-    resources:
-      - clusterclasses
-    verbs:
-      - create
-      - update
-      - get
-      - list
-      - delete
-  - apiGroups:
-      - bootstrap.cluster.x-k8s.io
-    resources:
-      - kubeadmconfigtemplates
-    verbs:
-      - create
-      - update
-      - get
-      - list
-      - delete
-  - apiGroups:
-      - infrastructure.cluster.x-k8s.io
-    resources:
-      - awsmachinetemplates
-      - awsclustertemplates
-      - vspheremachinetemplates
-      - vsphereclustertemplates
-      - azuremachinetemplates
-      - azureclustertemplates
-      - dockermachinetemplates
-      - dockerclustertemplates
-    verbs:
-      - create
-      - update
-      - get
-      - list
-      - delete
-  - apiGroups:
-      - controlplane.cluster.x-k8s.io
-    resources:
-      - kubeadmcontrolplanetemplates
-    verbs:
-      - create
-      - update
-      - get
-      - list
-      - delete
-  - apiGroups:
-      - packaging.carvel.dev
-    resources:
-      - packageinstalls
-    verbs:
-      - create
-      - update
-      - get
-      - list
-      - delete
-  - apiGroups:
-      - rbac.authorization.k8s.io
-    resources:
-      - clusterroles
-      - clusterrolebindings
-    verbs:
-      - create
-      - update
-      - get
-      - list
-      - delete
+  #  RBAC rules to create PackageInstall CR and service accounts
+  - apiGroups: ["*"]
+    resources: ["*"]
+    verbs: ["*"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
