Workaround tkr resolution by hardcoding os-name

--- a/pkg/v1/providers/infrastructure-vsphere/v1.1.0/yttcc/base-template.yaml
+++ b/pkg/v1/providers/infrastructure-vsphere/v1.1.0/yttcc/base-template.yaml
@@ -16,9 +16,13 @@ spec:
     version: v1.21.2
     controlPlane:
       replicas: ${CONTROL_PLANE_MACHINE_COUNT}
+      metadata:
+        annotations:
     workers:
       machineDeployments:
       - class: tkg-worker
         name: tkg-worker-pool
         replicas: ${WORKER_MACHINE_COUNT}
+        metadata:
+          annotations:
     variables:
