--- a/pkg/v1/providers/infrastructure-vsphere/v1.1.0/cconly/base.yaml
+++ b/pkg/v1/providers/infrastructure-vsphere/v1.1.0/cconly/base.yaml
@@ -647,7 +647,7 @@ spec:
               {{- end }}
               sudo: ALL=(ALL) NOPASSWD:ALL
   - name: kubeVIPPod
-    enabledIf: '{{ not .aviAPIServerHAProvider }}'
+    #enabledIf: '{{ not .aviAPIServerHAProvider }}'
     definitions:
     - selector:
         apiVersion: controlplane.cluster.x-k8s.io/v1beta1
